# sqlite-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  build.rs  pyproject.toml
.github/workflows/: CI.yml
docs/source/: conf.py  index.md
docs/source/examples/: extracting_sqlite_library_and_pointers.md  index.md
docs/source/notebooks/: extracting_sqlite_library_and_pointers.py
native/: sqlite_rs_shim.c  sqlite_rs_shim.h
python/sqlite_rs/: __init__.py  __init__.pyi
scripts/: vendor_cpython.py  vendor_sqlite.py  vendor_typeshed_sqlite3.py
src/: lib.rs
src/sqlite_rs/: __init__.py
tests/: test_query_via_rust.py  test_single_libsqlite3_instance.py  test_sqlite_build_identity.py
