[package]
name = "sqlite-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"

[build-dependencies]
cc = "1"
pyo3-build-config = "0.29.0"
