[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

[project]
name = "sqlite-rs"
description = ""
authors = [
    { name = "Timothy Stephenson", email = "38039215+tim-stephenson@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]


[dependency-groups]
dev = [
    "maturin",
    "marimo",
    "sphinx",
    "ruff",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "myst-parser",
    "pytest",
    "basedpyright",
]

[tool.ruff]
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "EXE001",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"docs/**/*.py" = ["INP001", "D103"]
"docs/source/notebooks/*.py" = ["ANN001", "ANN202", "B018", "PLC0415", "PLR1711"]
"tests/**/*.py" = ["S101", "D103", "INP001"]
"scripts/**/*.py" = ["T201", "D103"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "sqlite_rs._core"

[tool.basedpyright]
exclude = [
    "**/node_modules", 
    "**/__pycache__",
    "**/.*",
    "target",
    "vendor",
    "python/sqlite_rs/sqlite3",
    "docs/source/notebooks",
]
