[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

[project]
name = "sqlite-rs"
description = ""
authors = [
    { name = "Timothy Stephenson", email = "38039215+tim-stephenson@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]


[dependency-groups]
test = [
    "pytest",
    "pywin32; sys_platform == 'win32'",
]
dev = [
    "maturin",
    "marimo",
    "sphinx",
    "ruff",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "myst-parser",
    "basedpyright",
    {include-group = "test"},
]

[tool.ruff]
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "EXE001",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"docs/**/*.py" = ["INP001", "D103"]
"docs/source/notebooks/*.py" = ["ANN001", "ANN202", "B018", "PLC0415", "PLR1711"]
"tests/**/*.py" = ["S101", "D103", "INP001"]
"scripts/**/*.py" = ["T201", "D103"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "sqlite_rs._core"
# maturin's default wheel packaging uses `git ls-files` to decide what to
# include from python-source, so it respects .gitignore -- but build.rs
# materializes sqlite_rs/sqlite3/ (the CPython clone module) and the bundled
# libsqlite3 shared library at build time, and both are gitignored (they're
# generated, not source). Without forcing them back in, wheels silently ship
# without sqlite_rs.sqlite3 at all. shared_lib_name() in build.rs names the
# library sqlite3.dll on Windows (no "lib" prefix, matching upstream SQLite's
# own convention) but libsqlite3.{so,dylib} elsewhere, so list all three
# rather than one glob that would miss the Windows case.
include = [
    "python/sqlite_rs/sqlite3/**/*",
    "python/sqlite_rs/libsqlite3.so",
    "python/sqlite_rs/libsqlite3.dylib",
    "python/sqlite_rs/sqlite3.dll",
]

[tool.basedpyright]
exclude = [
    "**/node_modules", 
    "**/__pycache__",
    "**/.*",
    "target",
    "vendor",
    "python/sqlite_rs/sqlite3",
    "docs/source/notebooks",
]
