[build-system]
requires = ["maturin>=1.14.1,<2.0"]
build-backend = "maturin"

[project]
name = "sqlite-rs"
description = ""
authors = [
    { name = "Timothy Stephenson", email = "38039215+tim-stephenson@users.noreply.github.com" }
]
license = "MIT"
# The two vendor/*/LICENSE globs cover the third-party code THIRD_PARTY_NOTICES
# describes (CPython's PSF License, typeshed's Apache License) -- included
# here (not just in the sdist) so the actual shipped wheel, which bundles
# compiled/copied code from both, carries their license text too.
license-files = ["LICENSE", "THIRD_PARTY_NOTICES", "vendor/cpython/*/LICENSE", "vendor/typeshed/LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]


[dependency-groups]
test = [
    "pytest",
    "pywin32; sys_platform == 'win32'",
]
dev = [
    "maturin",
    "marimo",
    "sphinx",
    "ruff",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "myst-parser",
    "basedpyright",
    {include-group = "test"},
]

[tool.ruff]
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "EXE001",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"docs/**/*.py" = ["INP001", "D103"]
"docs/source/notebooks/*.py" = ["ANN001", "ANN202", "B018", "PLC0415", "PLR1711"]
"tests/**/*.py" = ["S101", "D103", "INP001"]
"scripts/**/*.py" = ["T201", "D103"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "sqlite_rs._core"
# maturin's default wheel packaging uses `git ls-files` to decide what to
# include from python-source, so it respects .gitignore -- but build.rs
# materializes sqlite_rs/sqlite3/ (the CPython clone module) and the bundled
# libsqlite3 shared library at build time, and both are gitignored (they're
# generated, not source). Without forcing them back in, wheels silently ship
# without sqlite_rs.sqlite3 at all. shared_lib_name() in build.rs names the
# library sqlite_rs_libsqlite3.dll on Windows (project-prefixed, to avoid
# colliding with CPython's own bundled sqlite3.dll -- see that function's
# doc comment) but libsqlite3.{so,dylib} elsewhere, so list all three rather
# than one glob that would miss the Windows case.
#
# format = "wheel" on every entry: without it, maturin applies this same
# force-include to the sdist too, which has no build step to freshly
# (re)generate these paths -- it just tars up whatever happens to be
# sitting there on disk, so it would ship whatever locally-built,
# platform-specific binaries (and __pycache__ cruft) happened to exist in a
# maintainer's working tree at sdist-build time (confirmed in practice).
# Scoping to "wheel" restores the sdist's normal git-tracked-files-only
# behavior, since these paths are meant to be regenerated by build.rs from
# vendor/ at build time, not shipped as source.
include = [
    { path = "python/sqlite_rs/sqlite3/**/*", format = "wheel" },
    { path = "python/sqlite_rs/libsqlite3.so", format = "wheel" },
    { path = "python/sqlite_rs/libsqlite3.dylib", format = "wheel" },
    { path = "python/sqlite_rs/sqlite_rs_libsqlite3.dll", format = "wheel" },
]

[tool.basedpyright]
exclude = [
    "**/node_modules", 
    "**/__pycache__",
    "**/.*",
    "target",
    "vendor",
    "python/sqlite_rs/sqlite3",
    "docs/source/notebooks",
]
